--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
 	"dependencies": {
 		"@tauri-apps/api": "^1.4.0",
 		"sveltekit-superforms": "^1.4.0",
-		"zod": "^3.21.4"
+		"yup": "^1.2.0"
 	}
 }
