--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "app"
+name = "servicebooks-backend"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
-default-run = "app"
+description = "Tauri backend for the ServiceBooks Client"
+authors = ["exotik850"]
+license = "MIT"
+repository = "https://github.com/Exotik850/servicebooks-client"
+default-run = "servicebooks-backend"
 edition = "2021"
 rust-version = "1.60"
 
@@ -18,6 +18,11 @@ tauri-build = { version = "1.4.0", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.4.0", features = [ "window-close", "window-minimize", "window-unminimize", "window-start-dragging", "window-unmaximize", "window-maximize"] }
+quick-oxibooks = { path="../../quick-oxibooks" }
+service-poxi = {path="../../service-poxi"}
+chrono = "0.4.26"
+tokio = {version = "1.29.1", features = ["full"] }
+
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
