--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,7 +22,8 @@ quick-oxibooks = { path="../../quick-oxibooks", features= ["cache"] }
 service-poxi = {path="../../service-poxi"}
 chrono = "0.4.26"
 tokio = {version = "1.29.1", features = ["macros"] }
-
+env_logger = "0.10.0"
+window-vibrancy = "0.4.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
