--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,7 +19,7 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.4.0", features = [ "window-close", "window-minimize", "window-unminimize", "window-start-dragging", "window-unmaximize", "window-maximize"] }
 quick-oxibooks = { path="../../quick-oxibooks", features= ["cache"] }
-service-poxi = {path="../../service-poxi"}
+service-poxi = {path="../../service-poxi", features = ["log"] }
 chrono = "0.4.26"
 tokio = {version = "1.29.1", features = ["macros"] }
 env_logger = "0.10.0"
