--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,7 +23,7 @@ service-poxi = {path="../../service-poxi", features = ["log"] }
 chrono = "0.4.26"
 tokio = {version = "1.29.1", features = ["macros"] }
 env_logger = "0.10.0"
-window-vibrancy = "0.4.0"
+window-shadows = "0.2.1"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
