--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ quick-oxibooks = { path="../../quick-oxibooks", features= ["cache"] }
 service-poxi = {path="../../service-poxi", features = ["log"] }
 chrono = "0.4.26"
 tokio = {version = "1.29.1", features = ["macros"] }
+futures = "0.3.28"
 env_logger = "0.10.0"
 window-shadows = "0.2.1"
 
