--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ tauri-build = { version = "1.4.0", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.4.0", features = [ "window-close", "window-minimize", "window-unminimize", "window-start-dragging", "window-unmaximize", "window-maximize"] }
-quick-oxibooks = { path="../../quick-oxibooks", features= ["cache"] }
+quick-oxibooks = { path="../../quick-oxibooks", features= ["cache", "macros"] }
 service-poxi = {path="../../service-poxi", features = ["log"] }
 chrono = "0.4.26"
 tokio = {version = "1.29.1", features = ["macros"] }
