--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,12 +19,14 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.4.0", features = [ "window-close", "window-minimize", "window-unminimize", "window-start-dragging", "window-unmaximize", "window-maximize"] }
 quick-oxibooks = { path="../../quick-oxibooks", features= ["cache", "macros"] }
+intuit-oxi-auth = { path = "../../quick-oxibooks/intuit-oxi-auth", features = ["async", "cache"] }
 service-poxi = {path="../../service-poxi", features = ["log"] }
 chrono = "0.4.26"
 tokio = {version = "1.29.1", features = ["macros"] }
 futures = "0.3.28"
 env_logger = "0.10.0"
 window-shadows = "0.2.1"
+open = "5.0.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
