--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "servicebooks-backend"
-version = "0.1.0"
+version = "0.1.2"
 description = "Tauri backend for the ServiceBooks Client"
 authors = ["exotik850"]
 license = "MIT"
@@ -15,17 +15,18 @@ rust-version = "1.60"
 tauri-build = { version = "1.4.0", features = [] }
 
 [dependencies]
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.4.0", features = [ "updater", "window-close", "window-minimize", "window-unminimize", "window-start-dragging", "window-unmaximize", "window-maximize"] }
+serde_json = "1.0.105"
+serde = { version = "1.0.188", features = ["derive"] }
+tauri = { version = "1.4.1", features = [ "updater", "window-close", "window-minimize", "window-unminimize", "window-start-dragging", "window-unmaximize", "window-maximize"] }
 quick-oxibooks = { path="../../quick-oxibooks", features= ["cache", "macros"] }
 intuit-oxi-auth = { path = "../../quick-oxibooks/intuit-oxi-auth", features = ["async", "cache"] }
 service-poxi = {path="../../service-poxi", features = ["log"] }
-chrono = "0.4.26"
-tokio = {version = "1.29.1", features = ["macros"] }
+chrono = "0.4.28"
+tokio = {version = "1.32.0", features = ["macros"] }
 futures = "0.3.28"
 env_logger = "0.10.0"
 open = "5.0.0"
+window-shadows = "0.2.1"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
