--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,14 +17,14 @@ tauri-build = { version = "1.4.0", features = [] }
 [dependencies]
 serde_json = "1.0.105"
 serde = { version = "1.0.188", features = ["derive"] }
-tauri = { version = "1.4.1", features = [ "updater", "window-close", "window-minimize", "window-unminimize", "window-start-dragging", "window-unmaximize", "window-maximize"] }
+tauri = { version = "1.4.1", features = [ "dialog-open", "updater", "window-close", "window-minimize", "window-unminimize", "window-start-dragging", "window-unmaximize", "window-maximize"] }
 quick-oxibooks = { path="../../quick-oxibooks", features= ["cache", "macros"] }
 intuit-oxi-auth = { path = "../../quick-oxibooks/intuit-oxi-auth", features = ["async", "cache"] }
 service-poxi = {path="../../service-poxi", features = ["log"] }
 chrono = "0.4.28"
 tokio = {version = "1.32.0", features = ["macros"] }
 futures = "0.3.28"
-env_logger = "0.10.0"
+pretty_env_logger = "0.5.0"
 open = "5.0.0"
 window-shadows = "0.2.1"
 
