--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,10 +17,10 @@ tauri-build = { version = "1.4.0", features = [] }
 [dependencies]
 serde_json = "1.0.105"
 serde = { version = "1.0.188", features = ["derive"] }
-tauri = { version = "1.4.1", features = [ "dialog-open", "updater", "window-close", "window-minimize", "window-unminimize", "window-start-dragging", "window-unmaximize", "window-maximize"] }
-quick-oxibooks = { path="../../quick-oxibooks", features= ["cache", "macros"] }
+tauri = { version = "1.4.1", features = [ "protocol-asset", "dialog-open", "updater", "window-close", "window-minimize", "window-unminimize", "window-start-dragging", "window-unmaximize", "window-maximize"] }
+quick-oxibooks = { path="../../quick-oxibooks", features= ["cache", "macros", "attachments"] }
 intuit-oxi-auth = { path = "../../quick-oxibooks/intuit-oxi-auth", features = ["async", "cache"] }
-service-poxi = {path="../../service-poxi", features = ["log"] }
+service-poxi = {path="../../service-poxi", features = ["log", "document"] }
 chrono = "0.4.28"
 tokio = {version = "1.32.0", features = ["macros"] }
 futures = "0.3.28"
