--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ chrono = "0.4.28"
 tokio = {version = "1.32.0", features = ["macros"] }
 futures = "0.3.28"
 pretty_env_logger = "0.5.0"
+thiserror = "1.0.49"
 open = "5.0.0"
 window-shadows = "0.2.1"
 
