--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,7 +27,10 @@ futures = "0.3.28"
 pretty_env_logger = "0.5.0"
 thiserror = "1.0.49"
 open = "5.0.0"
+base64 = "0.21.5"
 window-shadows = "0.2.1"
+lettre = { version = "0.11.1", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"] }
+lettre_email = "0.9.4"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
